overlake/dts: add ramoops area
ramoops is needed to collect dmesg during early panics, or to collect
systemd shutdown data without performance regressions.

Signed-off-by: Pavel Tatashin <pasha.tatashin@soleen.com>
Link: https://microsoft.visualstudio.com/OS/_workitems/edit/25822828
TAG_MSFT: overlake
Signed-off-by: Tyler Hicks <tyhicks@linux.microsoft.com>

--- a/arch/arm64/boot/dts/broadcom/stingray/custom/overlake/overlake.dts
+++ b/arch/arm64/boot/dts/broadcom/stingray/custom/overlake/overlake.dts
@@ -64,6 +64,13 @@
 		tcg-log@C0000000 {
 			reg = <0x00000000 0xC0000000 0x00000000 0x00010000>;
 		};
+
+		ramoops {
+			compatible = "ramoops";
+			reg = <0x00000009 0x7FC00000 0x00000000 0x00400000>;
+			record-size = <0x80000>;
+			max-reason = <5>;
+		};
 	};
 
 	tpm@0 {
